syntax = "proto3";
package data_access;

service Database {
    rpc GetPoints (GetPointsRequest) returns (GetPointsResponse);
    rpc SetPoints (SetPointsRequest) returns (SetPointsResponse);
    rpc AddPoints (AddPointsRequest) returns (AddPointsResponse);
}

message GetPointsRequest {
  string streamer_name = 1;
  string viewer_name = 2;
}

message GetPointsResponse {
  int64 points = 1;
}

message SetPointsRequest {
  string streamer_name = 1;
  string viewer_name = 2;
  int64 points = 3;
}

message SetPointsResponse {}

message AddPointsRequest {
  string streamer_name = 1;
  string viewer_name = 2;
  int64 points = 3;
}

message AddPointsResponse {
  int64 points = 1;
}
